      to "$2" lt-nl "4.2.31-2". This check correctly catches the respective
      ubuntu or backport versions.
    - add /var/lib/schroot/mount to PRUNEPATHS.
  * Add ocfs2 to PRUNEFS. Closes: #516776
  * Standards-Version 3.8.0. No changes required.
  * Clean up debian/rules:
    + Stop setting INSTALL_PROGRAM += -s on DEB_BUILD_OPTIONS=nostrip in
      debian/rules.

 -- Andreas Metzler <ametzler@debian.org>  Sun, 01 Mar 2009 18:27:17 +0100

findutils (4.4.0-2) unstable; urgency=low

  * Stop generating a unnecessary unsafe tempfile in testsuite. Should fix
    ftbfs on hppa. [debian/patches/10_unnecessary_tempfile.dpatch]

 -- Andreas Metzler <ametzler@debian.org>  Thu, 03 Apr 2008 19:38:59 +0200

findutils (4.4.0-1) unstable; urgency=low

  * New upstream stable version.
    + Some fixes for the texinfo manuals. (Closes: #470308)
  * First upload to unstable, close bugs fixed by previous uploads to
    experimental:
    + POSIX is going to or has already standardized -[i]path. Stop throwing a
      warning sugging to use -[i]wholename instead. Closes: #336078
    + Better error message if the second operand of a binary operator is
      missing. (Closes: #403823)
    + #22056: -Xtime tests are off by one second (e.g. rm -f x; touch x;
      find x -mtime 0 should print x). Closes: #460733
    + If locatedb is old show actual age in warning mesage instead of just
      saying "more than 8 days old". (Closes: #354384)
    + Do not show warnings about argument ordering if -nowarn is specified.
      (Closes: #370057)
    + find -execdir will not segfault if PATH is not set. Closes: #438689
    + Different error message on 'find ""'. (Closes: #21084)
    + Support for *BSDs -newerXY tests allows to find files with a date in the
      future without generating a temporary file. "find -newermt 2007-07-07"
      (Closes: #291419)
  * Stop trying to install removed README-alpha.
  * Point watchfile to ftp.gnu.org instead of alpha.gnu.org.